# najmcourse-backend-service

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  apply-env.cmd  apply-env.ps1  apply-env.sh  default.nix  docker-compose.yml  docker.nix  flake.nix  rustfmt.toml  shell.nix
.github/workflows/: build.yml  deploy.yml
najm-backend/: Cargo.toml
najm-backend/src/: main.rs
najm-cms/: Cargo.toml
najm-cms/src/v1/: mod.rs
najm-cms/src/v1/landing/: mod.rs
najm-cms/src/v1/landing/events/: events_controller.rs  events_dto.rs  events_repository.rs  events_schema.rs  events_service.rs  mod.rs
najm-entity/: Cargo.toml
najm-entity/src/: common_dto.rs  lib.rs
najm-entity/src/common/: mod.rs
najm-entity/src/error/: mod.rs
najm-exam/: Cargo.toml  STUDENT_STATS_ENDPOINT.md
najm-exam/src/: lib.rs
najm-exam/src/v1/: mod.rs
najm-exam/src/v1/answers/: answers_controller.rs  answers_dto.rs  answers_repository.rs  answers_schema.rs  answers_service.rs  mod.rs  score_formula_documentation.md  score_formula_test.rs
najm-exam/src/v1/options/: mod.rs  options_controller.rs  options_dto.rs  options_repository.rs  options_schema.rs  options_service.rs
najm-exam/src/v1/questions/: mod.rs  questions_controller.rs  questions_dto.rs  questions_repository.rs  questions_schema.rs  questions_service.rs
najm-exam/src/v1/sessions/: mod.rs  sessions_controller.rs  sessions_dto.rs  sessions_enum.rs  sessions_repository.rs  sessions_schema.rs  sessions_service.rs
najm-exam/src/v1/student_stats/: mod.rs  student_stats_controller.rs  student_stats_dto.rs  student_stats_repository.rs  student_stats_service.rs
najm-exam/src/v1/tests/: mod.rs  tests_controller.rs  tests_dto.rs  tests_repository.rs  tests_schema.rs  tests_service.rs
najm-gateway/: Cargo.toml
najm-gateway/src/: docs.rs  lib.rs
najm-iam/: Cargo.toml
najm-iam/src/: lib.rs
najm-iam/src/v1/: mod.rs
najm-iam/src/v1/admin_stats/: admin_stats_controller.rs  admin_stats_dto.rs  admin_stats_repository.rs  admin_stats_schema.rs  admin_stats_service.rs  mod.rs
najm-iam/src/v1/auth/: auth_controller.rs  auth_dto.rs  auth_repository.rs  auth_schema.rs  auth_service.rs  mod.rs
najm-iam/src/v1/permissions/: mod.rs  permissions_controller.rs  permissions_dto.rs  permissions_enum.rs  permissions_guard.rs  permissions_repository.rs  permissions_schema.rs  permissions_service.rs
najm-iam/src/v1/roles/: mod.rs  roles_controller.rs  roles_dto.rs  roles_enum.rs  roles_repository.rs  roles_schema.rs  roles_service.rs
najm-iam/src/v1/users/: mod.rs  users_controller.rs  users_dto.rs  users_repository.rs  users_schema.rs  users_service.rs
najm-integration/: Cargo.toml
najm-integration/src/: lib.rs
najm-integration/src/v1/: mod.rs
najm-integration/src/v1/storage/: mod.rs  storage_controller.rs  storage_dto.rs  storage_repository.rs  storage_state.rs
najm-lib/: Cargo.toml
najm-lib/src/: lib.rs
najm-lib/src/argon/: mod.rs
najm-lib/src/axum/: mod.rs
najm-lib/src/enviroment/: mod.rs
najm-lib/src/jsonwebtoken/: mod.rs
najm-lib/src/lettre/: mod.rs
najm-lib/src/surrealdb/: mod.rs  resource.rs
najm-middleware/: Cargo.toml
najm-middleware/src/: lib.rs
najm-middleware/src/auth_middleware/: mod.rs
najm-middleware/src/cors_middleware/: mod.rs
najm-middleware/src/permissions_middleware/: mod.rs
najm-tests/: Cargo.toml
najm-tests/src/: lib.rs
najm-tests/src/answers/: answers_dto_tests.rs  answers_repository_tests.rs  answers_schema_tests.rs  answers_service_tests.rs  mod.rs
najm-util/: Cargo.toml
najm-util/src/: bind_filter.rs  extract_email.rs  generate_date.rs  generate_otp.rs  get_id.rs  lib.rs  make_thing.rs  mock_test.rs  query_builder.rs  query_list.rs  response_format.rs  validator.rs
tests/: Cargo.toml
tests/src/: lib.rs
tests/src/exam/: mod.rs
tests/src/exam/answers/: answers_controller_test.rs  answers_repository_test.rs  mod.rs
tests/src/exam/options/: mod.rs  options_controller_test.rs  options_repository_test.rs
tests/src/exam/questions/: mod.rs  questions_controller_test.rs  questions_repository_test.rs
tests/src/exam/sessions/: mod.rs  sessions_controller_test.rs  sessions_repository_test.rs
tests/src/exam/tests/: mod.rs  tests_controller_test.rs  tests_repository_test.rs
tests/src/iam/auth/: auth_repository_test.rs  mod.rs
tests/src/iam/permissions/: mod.rs  permissions_repository_test.rs
tests/src/iam/roles/: mod.rs  roles_repository_test.rs
tests/src/iam/users/: mod.rs  users_repository_test.rs
