[package]
name = "najm-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
najm-exam = { path = "../najm-exam" }
najm-lib = { path = "../najm-lib" }
najm-entity = { path = "../najm-entity" }
najm-util = { path = "../najm-util" }
anyhow = { workspace = true }
tokio = { workspace = true }
surrealdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
validator = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }