[package]
name = "najm-util"
version = "0.1.0"
edition = "2024"

[dependencies]
najm-lib = { path = "../najm-lib"}
najm-entity = { path = "../najm-entity" }
surrealdb.workspace = true
axum.workspace = true
chrono.workspace = true
rand.workspace = true
anyhow.workspace = true
axum-test.workspace = true
serde.workspace = true
serde_json.workspace = true
validator.workspace = true
