[package]
name = "tests"
version = "0.1.0"
edition = "2024"

[dependencies]
najm-iam = { version = "0.1.0", path = "../najm-iam" }
najm-lib = { version = "0.1.0", path = "../najm-lib" }
najm-util = { version = "0.1.0", path = "../najm-util" }
najm-entity = { version = "0.1.0", path = "../najm-entity" }
axum.workspace = true
axum-test.workspace = true
chrono.workspace = true
surrealdb.workspace = true
tokio.workspace = true
serde_json.workspace = true
